--- a/style.css
+++ b/style.css
@@ -237,31 +237,32 @@ body {
 /*Background images*/
 .slide:first-child {
   background-image: url("images/cinnamonsugarpretzels.jpg");
-  background-size: cover;
+  background-size: fit;
 }
 
 .slide:nth-child(2) {
   background-image: url("images/JalapenoPret.jpg");
-  background-size: cover;
+  background-size: fit;
 }
 
 .slide:nth-child(3) {
   background-image: url("images/Garlic\ Parm.jpg");
-  background-size: cover;
+  background-size: fit;
 }
 
 .slide:nth-child(4) {
   background-image: url("images/OriginalPretzel.jpg");
-  background-size: cover;
+  background-size: fit;
 }
 
 .slide:nth-child(5) {
   background-image: url("images/PretzelDog.jpg");
+  background-size: fit; 
 }
 
 .slide:nth-child(6) {
   background-image: url("images/PretzelBites.jpg");
-  background-size: cover;
+  background-size: fit;
 }
 
 .card {
@@ -306,5 +307,85 @@ body {
     opacity: .5;
   }
 
-  
+  body,
+html {
+  font-family: omnes-pro, sans-serif;
+}
+
+.container {
+  width: 610px;
+  margin: 0 auto;
+}
+
+.overlay-container {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.image {
+  position:cover;
+  width: 100%;
+}
+
+.text {
+  color: #A34121;
+  position: absolute;
+  top: 15%;
+  text-align: center;
+  width: 100%;
+  font-size: 15px;
+  transition: translate(-50%, -50%);
+}
+
+
+.overlay {
+  position: absolute;
+  transition: all 300ms ease;
+  background: #FCF8AA;
+  opacity: 0;
+}
+
+.overlay-container:hover .overlay {
+  opacity: 1;
+}
+
+
+.overlay-left {
+  height: 100%;
+  width: 0;
+  top: 0;
+  left: 0;
+}
+
+.overlay-right {
+  height: 100%;
+  width: 0;
+  top: 0;
+  right: 0;
+}
+
+.overlay-top {
+  height: 0;
+  width: 100%;
+  top: 0;
+  right: 0;
+}
+
+
+.overlay-container:hover .overlay-left {
+  width: 100%;
+}
+
+.overlay-container:hover .overlay-right {
+  width: 100%;
+}
+
+.overlay-container:hover .overlay-top {
+  height: 100%;
+}
+
+
   
